# ascetic

./: .gitignore  Cargo.toml  README.md  cargo-check-updates  rustfmt.toml
boy/: Cargo.toml
boy/examples/: demo_scene_control.rs
boy/src/: error.rs  gui.rs  keyboard.rs  lib.rs  logger.rs  main.rs  pixels.rs  renderer.rs  scheduler.rs
cli/: Cargo.toml  LICENSE-MIT  README.md
cli/src/: ascetic.cli  go.rs  lib.rs  main.rs  sample.rs  solve.rs  style.rs  validate.rs
dam/: Cargo.toml  LICENSE-MIT  README.md  cargo-check-updates
dam/macro/: Cargo.toml
dam/macro/src/: lib.rs
dam/src/: asset.rs  error.rs  formatter.rs  group.rs  lib.rs  source.rs
dam/src/assets/: index.tt.html  index.tt.scss
data/: bridge-good.cex  choice-six.cex  choice-three.cex  choice-two.cex  meet-two.cex  test-coherence.cex
doc/run/: octo-gfm  octo-markdown  octo-raw-markdown
doc/theory/: fido.tex  firing-semantics.tex  fusets.md  notes.md  weights.md
pet/: Cargo.toml  README.md  run-example.sh
pet/examples/: dump.rs
pet/run/: dump-test.sh
pet/src/: lib.rs  pnml.rs
rut/: Cargo.toml
rut/examples/: demo_scene_control.rs  roundabout.rs
rut/run/: demo-scene.sh  roundabout.sh
rut/src/: error.rs  frame.rs  gui.rs  keyboard.rs  lib.rs  logger.rs  main.rs  mouse.rs  raster.rs  renderer.rs  scheduler.rs
scripts/: ascesis.sh  demo-arrow.sh  pet-dump-test.sh  vis-demo-scene-dark.sh  vis-demo-scene-middle.sh  vis-demo-scene.sh
scripts/ces/: absorption-fj.ces  arrow.ces  choice-six.ces  independent-arrows-six.ces  meet-two.ces  test-absorption-pl-all.ces  test-absorption-pl-min.ces  test-capacities.ces  test-coherence.ces  test-inhibitors.ces  zerotest-variant.ces  zerotest.ces
scripts/ces/tests/: bad-props.ces  weights.ces
scripts/cex/: arrow-sequence-six.cex  arrow-sequence-two.cex  arrow.cex  bridge-bad.cex  choice-five.cex  fork-six.cex  independent-arrows-six.cex  join-six.cex  meet-five.cex  test-absorption.cex  test-syntax-01.cex  test-syntax-02.cex
scripts/examples/: arrow-sequence-six.ces  arrow-sequence-two.ces  biclique-decomposed.ces  biclique.ces  bridge-bad.ces  bridge-good.ces  choice-five.ces  choice-six.ces  choice-three.ces  choice-two.ces  empty-triangle.ces  fork-six.ces  grid1d.ces  grid2d.ces  grids.ces  join-six.ces  m-shape.ces  zerotest-elementary.ces  zerotest-variant.ces  zerotest.ces
scripts/nat/: addition.ces  division.ces  fig-1.1.ces  fig-1.2.ces  fig-2.1.ces  gcd.ces  modulo.ces  multiplication.ces  subtraction.ces  summation.ces
scripts/pnml/: test.pnml
scripts/rs/: a2-bad.ces  a2-twophase.ces
scripts/tests/: ast.ces  bad-props.ces  capacities.ces  coherence.ces  inhibitors.ces  layout.ces  weights.ces
tool/: Cargo.toml  README.md
tool/src/: ascetic.cli  main.rs
toy/: Cargo.toml  README.md
toy/examples/: demo_scene_control.rs
toy/run/: arrow.sh  ascesis.sh
toy/src/: error.rs  go.rs  gui.rs  lib.rs  logger.rs  main.rs  mouse.rs  pan.rs  pixels.rs  renderer.rs  sample.rs  solve.rs  validate.rs  zoom.rs
vis/: Cargo.toml  LICENSE-MIT  run-dark-example.sh  run-example.sh
vis/examples/: demo_scene.rs  demo_scene_cairo.rs  demo_scene_tiny.rs  demo_scene_usvg.rs  roundabout_fvg.rs  roundabout_tiny.rs  simple.rs
vis/run/: cairo-demo-scene.sh  demo-scene-dark.sh  demo-scene-middle.sh  demo-scene.sh  fvg-roundabout.sh  roundabout.sh  tiny-demo-scene.sh  tiny-roundabout.sh  usvg-demo-scene.sh
vis/src/: builder.rs  crumb.rs  error.rs  font.rs  group.rs  joint.rs  lib.rs  prim.rs  scene.rs  style.rs  text.rs  theme.rs  tweener.rs
vis/src/backend/: cairo.rs  mod.rs  svg.rs  usvg.rs
vis/src/backend/cairo/: mod.rs
vis/src/backend/fvg/: mod.rs
vis/src/backend/svg/: mod.rs  render_context.rs
vis/src/backend/usvg/: mod.rs  render_context.rs
