[package]

name = "ascetic_cli"
version = "0.0.1-pre"
description = "Command-line tools for analysis and synthesis of cause-effect synchronised interacting systems"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[dependencies]

log = "0.4"
fern = { version = "0.5", features = ["colored"] }
clap = { version = "2.33", features = ["yaml"] }
glob = "0.3"
ascesis = { path = "../../ascesis" }
# ascesis = "0.0.3"

[[bin]]

name = "ascesis"
path = "src/main.rs"
