[package]

name = "ascetic_pet"
version = "0.0.1-pre"
description = "A library for reading PNML files into c-e structures"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[dependencies]

log = "0.4"
roxmltree = "0.14"
cssparser = "0.29"
