[package]

name = "ascetic_rut"
version = "0.0.1-pre"
description = "A playground for c-e structure animation"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[dependencies]

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
pixels = "0.3"
ascetic_vis = { path = "../vis" }

[dependencies.winit]

version = "0.25"
default-features = false
features = ["x11"]
