[package]

name = "ascetic_toy"
version = "0.0.1-pre"
description = "A playground for c-e structure animation"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[dependencies.minifb]

version = "0.19"
default-features = false
features = ["x11"]

[dependencies]

log = "0.4"
ascetic_vis = { path = "../vis" }
