[package]

name = "ascetic_vis"
version = "0.0.1-pre"
description = "Graphical rendering of c-e structures"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[dependencies]

kurbo = "0.7"
piet = "0.3"
piet-cairo = "0.3"
cairo-rs = "0.9"
png = "0.16"
