[package]

name = "ascetic_vis"
version = "0.0.1-pre"
description = "Graphical rendering of c-e structures"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/ascetic"
readme = "README.md"

[features]

default = ["tiny"]
tiny = ["usvg", "resvg", "tiny-skia"]
cairo = ["piet-cairo", "cairo-rs"]
svg = []

[dependencies]

kurbo = "0.8"
piet = "0.4"
png = "0.16"
usvg = { version = "0.14", optional = true }
resvg = { version = "0.14", optional = true }
tiny-skia = { version = "0.5", optional = true }
piet-cairo = { version = "0.4", optional = true }
cairo-rs = { version = "0.9", optional = true }

[[example]]

name = "demo_scene_tiny"
required-features = ["tiny", "svg"]

[[example]]

name = "demo_scene_cairo"
required-features = ["cairo", "svg"]
